@@ -12,18 +12,18 @@ import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.SPARQLStar2CypherTranslator
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.data.impl.LPGNode;
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.CypherMatchQuery;
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.CypherQuery;
-import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.CypherVar;
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.impl.CypherUnionQueryImpl;
-import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.impl.UnwindIteratorImpl;
-import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.impl.condition.*;
+import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.impl.expression.*;
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.impl.match.EdgeMatchClause;
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.impl.match.NodeMatchClause;
-import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.impl.returns.*;
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.utils.CypherQueryBuilder;
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.utils.CypherQueryCombinator;
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.utils.CypherVarGenerator;
 
-import java.util.*;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTranslator {
 
@@ -132,24 +132,25 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherQueryBuilder builder = new CypherQueryBuilder().addAll(innerTPTranslation);
         final CypherVar k = new CypherVar("k");
         if (configuration.mapsToProperty(p) && o.isLiteral()) {
-            builder.add(new PropertyValueCondition(edgeVar, configuration.unmapProperty(p),
-                    o.getLiteralValue().toString()));
+            builder.add(new EqualityExpression(new PropertyAccessExpression(edgeVar, configuration.unmapProperty(p)),
+                    new LiteralExpression(o.getLiteralValue().toString())));
         } else if (p.isVariable() && o.isLiteral()) {
             final CypherVar iterVar = gen.getAnonVar();
-            builder.add(new UnwindIteratorImpl(k, "KEYS("+edgeVar+")",
-                    List.of(new PropertyValueConditionWithVar(edgeVar, k, o.getLiteralValue().toString())),
-                    List.of("k"), iterVar))
-                    .add(new VariableGetItemReturnStatement(iterVar, 0, gen.getRetVar(p)));
+            builder.add(new UnwindIteratorImpl(k, new KeysExpression(edgeVar),
+                    List.of(new EqualityExpression(new PropertyAccessWithVarExpression(edgeVar, k),
+                                new LiteralExpression(o.getLiteralValue().toString()))),
+                    List.of(k), iterVar))
+                    .add(new AliasedExpression(new GetItemExpression(iterVar, 0), gen.getRetVar(p)));
         } else if (configuration.mapsToProperty(p) && o.isVariable()) {
-            builder.add(new PropertyEXISTSCondition(edgeVar, configuration.unmapProperty(p)));
-            builder.add(new PropertyValueReturnStatement(edgeVar, configuration.unmapProperty(p),
-                    gen.getRetVar(o)));
+            builder.add(new EXISTSExpression(new PropertyAccessExpression(edgeVar, configuration.unmapProperty(p))));
+            builder.add(new AliasedExpression(
+                    new PropertyAccessExpression(edgeVar, configuration.unmapProperty(p)), gen.getRetVar(o)));
         } else if (p.isVariable() && o.isVariable()) {
             final CypherVar iterVar = gen.getAnonVar();
-            builder.add(new UnwindIteratorImpl(k, "KEYS("+edgeVar+")", null,
-                    List.of("k", edgeVar+"[k]"), iterVar))
-                    .add(new VariableGetItemReturnStatement(iterVar, 0, gen.getRetVar(p)))
-                    .add(new VariableGetItemReturnStatement(iterVar, 1, gen.getRetVar(o)));
+            builder.add(new UnwindIteratorImpl(k, new KeysExpression(edgeVar), null,
+                    List.of(k, new PropertyAccessWithVarExpression(edgeVar, k)), iterVar))
+                    .add(new AliasedExpression(new GetItemExpression(iterVar, 0), gen.getRetVar(p)))
+                    .add(new AliasedExpression(new GetItemExpression(iterVar, 1), gen.getRetVar(o)));
         } else {
             return null;
         }
@@ -262,9 +263,10 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar nodeVar = gen.getAnonVar();
         return new CypherQueryBuilder()
                 .add(new NodeMatchClause(nodeVar))
-                .add(new NodeIDCondition(nodeVar, configuration.unmapNode(s).getId()))
-                .add(new NodeLabelCondition(nodeVar, configuration.unmapNodeLabel(o)))
-                .add(new CountLargerThanZeroReturnStatement(gen.getAnonVar()))
+                .add(new EqualityExpression(new VariableIDExpression(nodeVar),
+                        new LiteralExpression(configuration.unmapNode(s).getId())))
+                .add(new VariableLabelExpression(nodeVar, configuration.unmapNodeLabel(o)))
+                .add(new AliasedExpression(new CountLargerThanZeroExpression(), gen.getAnonVar()))
                 .build();
     }
 
@@ -274,9 +276,11 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar nodeVar = gen.getAnonVar();
         return new CypherQueryBuilder()
                 .add(new NodeMatchClause(nodeVar))
-                .add(new NodeIDCondition(nodeVar, configuration.unmapNode(s).getId()))
-                .add(new PropertyValueCondition(nodeVar, configuration.unmapProperty(p), o.getLiteralValue().toString()))
-                .add(new CountLargerThanZeroReturnStatement(gen.getAnonVar()))
+                .add(new EqualityExpression(new VariableIDExpression(nodeVar),
+                        new LiteralExpression(configuration.unmapNode(s).getId())))
+                .add(new EqualityExpression(new PropertyAccessExpression(nodeVar, configuration.unmapProperty(p)),
+                        new LiteralExpression(o.getLiteralValue().toString())))
+                .add(new AliasedExpression(new CountLargerThanZeroExpression(), gen.getAnonVar()))
                 .build();
     }
 
@@ -288,10 +292,12 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar tgtVar = gen.getAnonVar();
         return new CypherQueryBuilder()
                 .add(new EdgeMatchClause(srcVar, edgeVar, tgtVar))
-                .add(new NodeIDCondition(srcVar, configuration.unmapNode(s).getId()))
-                .add(new EdgeLabelCondition(edgeVar, configuration.unmapEdgeLabel(p)))
-                .add(new NodeIDCondition(tgtVar, configuration.unmapNode(o).getId()))
-                .add(new CountLargerThanZeroReturnStatement(gen.getAnonVar()))
+                .add(new EqualityExpression(new VariableIDExpression(srcVar),
+                        new LiteralExpression(configuration.unmapNode(s).getId())))
+                .add(new VariableLabelExpression(edgeVar, configuration.unmapEdgeLabel(p)))
+                .add(new EqualityExpression(new VariableIDExpression(tgtVar),
+                        new LiteralExpression(configuration.unmapNode(o).getId())))
+                .add(new AliasedExpression(new CountLargerThanZeroExpression(), gen.getAnonVar()))
                 .build();
     }
 
@@ -304,8 +310,9 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar svar = gen.getVarFor(s);
         final CypherMatchQuery q = new CypherQueryBuilder()
                                     .add(new NodeMatchClause(svar))
-                                    .add(new PropertyValueCondition(svar, property, literal))
-                                    .add(new VariableReturnStatement(svar, gen.getRetVar(s)))
+                                    .add(new EqualityExpression(new PropertyAccessExpression(svar, property),
+                                            new LiteralExpression(literal)))
+                                    .add(new AliasedExpression(svar, gen.getRetVar(s)))
                                     .build();
         if (certainNodes.contains(s)) {
             return q;
@@ -315,8 +322,10 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
                 q,
                 new CypherQueryBuilder()
                         .add(new EdgeMatchClause(sedge.get(0), sedge.get(1), sedge.get(2)))
-                        .add(new PropertyValueCondition(sedge.get(1), property, literal))
-                        .add(new TripleMapReturnStatement(sedge.get(0), sedge.get(1), sedge.get(2), gen.getRetVar(s)))
+                        .add(new EqualityExpression(new PropertyAccessExpression(sedge.get(1), property),
+                                new LiteralExpression(literal)))
+                        .add(new AliasedExpression(new TripleMapExpression(sedge.get(0), sedge.get(1), sedge.get(2)),
+                                gen.getRetVar(s)))
                         .build());
     }
 
@@ -326,8 +335,8 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar svar = gen.getVarFor(s);
         return new CypherQueryBuilder()
                 .add(new NodeMatchClause(svar))
-                .add(new NodeLabelCondition(svar, label))
-                .add(new VariableReturnStatement(svar, gen.getRetVar(s)))
+                .add(new VariableLabelExpression(svar, label))
+                .add(new AliasedExpression(svar, gen.getRetVar(s)))
                 .build();
     }
 
@@ -341,9 +350,10 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar ovar = gen.getAnonVar();
         return new CypherQueryBuilder()
                 .add(new EdgeMatchClause(svar, evar, ovar))
-                .add(new NodeIDCondition(ovar, node.getId()))
-                .add(new EdgeLabelCondition(evar, relationship))
-                .add(new VariableReturnStatement(svar, gen.getRetVar(s)))
+                .add(new EqualityExpression(new VariableIDExpression(ovar),
+                        new LiteralExpression(node.getId())))
+                .add(new VariableLabelExpression(evar, relationship))
+                .add(new AliasedExpression(svar, gen.getRetVar(s)))
                 .build();
     }
 
@@ -352,8 +362,9 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar svar = gen.getVarFor(o);
         return new CypherQueryBuilder()
                 .add(new NodeMatchClause(svar))
-                .add(new NodeIDCondition(svar, configuration.unmapNode(s).getId()))
-                .add(new LabelsReturnStatement(svar, gen.getRetVar(o)))
+                .add(new EqualityExpression(new VariableIDExpression(svar),
+                        new LiteralExpression(configuration.unmapNode(s).getId())))
+                .add(new AliasedExpression(new LabelsExpression(svar), gen.getRetVar(o)))
                 .build();
     }
 
@@ -364,9 +375,10 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar var = gen.getAnonVar();
         return new CypherQueryBuilder()
                 .add(new NodeMatchClause(var))
-                .add(new NodeIDCondition(var, configuration.unmapNode(s).getId()))
-                .add(new PropertyEXISTSCondition(var, property))
-                .add(new PropertyValueReturnStatement(var, property, gen.getRetVar(o)))
+                .add(new EqualityExpression(new VariableIDExpression(var),
+                        new LiteralExpression(configuration.unmapNode(s).getId())))
+                .add(new EXISTSExpression(new PropertyAccessExpression(var, property)))
+                .add(new AliasedExpression(new PropertyAccessExpression(var, property), gen.getRetVar(o)))
                 .build();
     }
 
@@ -378,9 +390,10 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar yvar = gen.getVarFor(o);
         return new CypherQueryBuilder()
                 .add(new EdgeMatchClause(xvar, evar, yvar))
-                .add(new NodeIDCondition(xvar, configuration.unmapNode(s).getId()))
-                .add(new EdgeLabelCondition(evar, configuration.unmapEdgeLabel(p)))
-                .add(new VariableReturnStatement(yvar, gen.getRetVar(o)))
+                .add(new EqualityExpression(new VariableIDExpression(xvar),
+                        new LiteralExpression(configuration.unmapNode(s).getId())))
+                .add(new VariableLabelExpression(evar, configuration.unmapEdgeLabel(p)))
+                .add(new AliasedExpression(yvar, gen.getRetVar(o)))
                 .build();
     }
 
@@ -391,9 +404,11 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar yvar = gen.getAnonVar();
         return new CypherQueryBuilder()
                 .add(new EdgeMatchClause(xvar, evar, yvar))
-                .add(new NodeIDCondition(xvar, configuration.unmapNode(s).getId()))
-                .add(new NodeIDCondition(yvar, configuration.unmapNode(o).getId()))
-                .add(new RelationshipTypeReturnStatement(evar, gen.getRetVar(p)))
+                .add(new EqualityExpression(new VariableIDExpression(xvar),
+                        new LiteralExpression(configuration.unmapNode(s).getId())))
+                .add(new EqualityExpression(new VariableIDExpression(yvar),
+                        new LiteralExpression(configuration.unmapNode(o).getId())))
+                .add(new AliasedExpression(new TypeExpression(evar), gen.getRetVar(p)))
                 .build();
     }
 
@@ -406,11 +421,14 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar innerVar = new CypherVar("k");
         return new CypherQueryBuilder()
                 .add(new NodeMatchClause(xvar))
-                .add(new NodeIDCondition(xvar, configuration.unmapNode(s).getId()))
-                .add(new UnwindIteratorImpl(innerVar, "KEYS("+xvar+")",
-                        Collections.singletonList(new PropertyValueConditionWithVar(xvar, innerVar, literal)),
-                        Collections.singletonList("k"), iterVar))
-                .add(new VariableGetItemReturnStatement(iterVar, 0, gen.getRetVar(p)))
+                .add(new EqualityExpression(new VariableIDExpression(xvar),
+                        new LiteralExpression(configuration.unmapNode(s).getId())))
+                .add(new UnwindIteratorImpl(innerVar, new KeysExpression(xvar),
+                        List.of(new EqualityExpression(
+                                new PropertyAccessWithVarExpression(xvar, innerVar),
+                                new LiteralExpression(literal))),
+                        List.of(innerVar), iterVar))
+                .add(new AliasedExpression(new GetItemExpression(iterVar, 0), gen.getRetVar(p)))
                 .build();
     }
 
@@ -419,9 +437,10 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar node = gen.getAnonVar();
         return new CypherQueryBuilder()
                 .add(new NodeMatchClause(node))
-                .add(new NodeIDCondition(node, configuration.unmapNode(s).getId()))
-                .add(new NodeLabelCondition(node, configuration.unmapNodeLabel(o)))
-                .add(new LiteralValueReturnStatement("label", gen.getRetVar(p)))
+                .add(new EqualityExpression(new VariableIDExpression(node),
+                        new LiteralExpression(configuration.unmapNode(s).getId())))
+                .add(new VariableLabelExpression(node, configuration.unmapNodeLabel(o)))
+                .add(new AliasedExpression(new LiteralExpression("label"), gen.getRetVar(p)))
                 .build();
     }
 
@@ -430,8 +449,8 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar svar = gen.getVarFor(s);
         return new CypherQueryBuilder()
                 .add(new NodeMatchClause(svar))
-                .add(new VariableReturnStatement(svar, gen.getRetVar(s)))
-                .add(new LabelsReturnStatement(svar, gen.getRetVar(o)))
+                .add(new AliasedExpression(svar, gen.getRetVar(s)))
+                .add(new AliasedExpression(new LabelsExpression(svar), gen.getRetVar(o)))
                 .build();
     }
 
@@ -444,9 +463,9 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar ovar = gen.getVarFor(o);
         return new CypherQueryBuilder()
                 .add(new EdgeMatchClause(svar, evar, ovar))
-                .add(new EdgeLabelCondition(evar, relationship))
-                .add(new VariableReturnStatement(svar, gen.getRetVar(s)))
-                .add(new VariableReturnStatement(ovar, gen.getRetVar(o)))
+                .add(new VariableLabelExpression(evar, relationship))
+                .add(new AliasedExpression(svar, gen.getRetVar(s)))
+                .add(new AliasedExpression(ovar, gen.getRetVar(o)))
                 .build();
     }
 
@@ -457,9 +476,10 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar svar = gen.getVarFor(s);
         final CypherMatchQuery q = new CypherQueryBuilder()
                                         .add(new NodeMatchClause(svar))
-                                        .add(new PropertyEXISTSCondition(svar, property))
-                                        .add(new VariableReturnStatement(svar, gen.getRetVar(s)))
-                                        .add(new PropertyValueReturnStatement(svar, property, gen.getRetVar(o)))
+                                        .add(new EXISTSExpression(new PropertyAccessExpression(svar, property)))
+                                        .add(new AliasedExpression(svar, gen.getRetVar(s)))
+                                        .add(new AliasedExpression(new PropertyAccessExpression(svar, property),
+                                                gen.getRetVar(o)))
                                         .build();
         if (certainNodes.contains(s)) {
             return q;
@@ -468,9 +488,9 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         return new CypherUnionQueryImpl(
                 new CypherQueryBuilder()
                         .add(new EdgeMatchClause(sedge.get(0), sedge.get(1), sedge.get(2)))
-                        .add(new PropertyEXISTSCondition(sedge.get(1), property))
-                        .add(new TripleMapReturnStatement(sedge.get(0), sedge.get(1), sedge.get(2), gen.getRetVar(s)))
-                        .add(new PropertyValueReturnStatement(sedge.get(1), property, gen.getRetVar(o)))
+                        .add(new EXISTSExpression(new PropertyAccessExpression(sedge.get(1), property)))
+                        .add(new AliasedExpression(new TripleMapExpression(sedge.get(0), sedge.get(1), sedge.get(2)), gen.getRetVar(s)))
+                        .add(new AliasedExpression(new PropertyAccessExpression(sedge.get(1), property), gen.getRetVar(o)))
                         .build(),
                 q
         );
@@ -481,9 +501,9 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar svar = gen.getVarFor(s);
         return new CypherQueryBuilder()
                 .add(new NodeMatchClause(svar))
-                .add(new NodeLabelCondition(svar, configuration.unmapNodeLabel(o)))
-                .add(new VariableReturnStatement(svar, gen.getRetVar(s)))
-                .add(new LiteralValueReturnStatement("label", gen.getRetVar(p)))
+                .add(new VariableLabelExpression(svar, configuration.unmapNodeLabel(o)))
+                .add(new AliasedExpression(svar, gen.getRetVar(s)))
+                .add(new AliasedExpression(new LiteralExpression("label"), gen.getRetVar(p)))
                 .build();
     }
 
@@ -494,9 +514,10 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar yvar = gen.getAnonVar();
         return new CypherQueryBuilder()
                 .add(new EdgeMatchClause(svar, pvar, yvar))
-                .add(new NodeIDCondition(yvar, configuration.unmapNode(o).getId()))
-                .add(new VariableReturnStatement(svar, gen.getRetVar(s)))
-                .add(new RelationshipTypeReturnStatement(pvar, gen.getRetVar(p)))
+                .add(new EqualityExpression(new VariableIDExpression(yvar),
+                        new LiteralExpression(configuration.unmapNode(o).getId())))
+                .add(new AliasedExpression(svar, gen.getRetVar(s)))
+                .add(new AliasedExpression(new TypeExpression(pvar), gen.getRetVar(p)))
                 .build();
     }
 
@@ -510,11 +531,13 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final String literal = o.getLiteralValue().toString();
         final CypherMatchQuery q = new CypherQueryBuilder()
                                         .add(new NodeMatchClause(svar))
-                                        .add(new UnwindIteratorImpl(innerVar, "KEYS("+svar+")",
-                                                List.of(new PropertyValueConditionWithVar(svar, innerVar, literal)),
-                                                Collections.singletonList("k"), iterVar))
-                                        .add(new VariableReturnStatement(svar, gen.getRetVar(s)))
-                                        .add(new VariableGetItemReturnStatement(iterVar, 0, gen.getRetVar(p)))
+                                        .add(new UnwindIteratorImpl(innerVar, new KeysExpression(svar),
+                                                List.of(new EqualityExpression(
+                                                        new PropertyAccessWithVarExpression(svar, innerVar),
+                                                        new LiteralExpression(literal))),
+                                                List.of(innerVar), iterVar))
+                                        .add(new AliasedExpression(svar, gen.getRetVar(s)))
+                                        .add(new AliasedExpression(new GetItemExpression(iterVar, 0), gen.getRetVar(p)))
                                         .build();
         if (certainNodes.contains(s)) {
             return q;
@@ -523,11 +546,13 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         return new CypherUnionQueryImpl(
                 new CypherQueryBuilder()
                         .add(new EdgeMatchClause(sedge.get(0), sedge.get(1), sedge.get(2)))
-                        .add(new UnwindIteratorImpl(innerVar, "KEYS("+sedge.get(1)+")",
-                                List.of(new PropertyValueConditionWithVar(sedge.get(1), innerVar, literal)),
-                                Collections.singletonList("k"), iterVar2))
-                        .add(new TripleMapReturnStatement(sedge.get(0), sedge.get(1), sedge.get(2), gen.getRetVar(s)))
-                        .add(new VariableGetItemReturnStatement(iterVar2 , 0, gen.getRetVar(p)))
+                        .add(new UnwindIteratorImpl(innerVar, new KeysExpression(sedge.get(1)),
+                                List.of(new EqualityExpression(
+                                        new PropertyAccessWithVarExpression(sedge.get(1), innerVar),
+                                        new LiteralExpression(literal))), List.of(innerVar), iterVar2))
+                        .add(new AliasedExpression(new TripleMapExpression(sedge.get(0), sedge.get(1), sedge.get(2)),
+                                gen.getRetVar(s)))
+                        .add(new AliasedExpression(new GetItemExpression(iterVar2 , 0), gen.getRetVar(p)))
                         .build(),
                 q
         );
@@ -549,18 +574,20 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
             return new CypherQueryBuilder()
                     //this rule in the paper uses pvar and ovar, not anonymous vars so this query can't be reused
                     .add(new EdgeMatchClause(a1, pvar, ovar))
-                    .add(new NodeIDCondition(a1, node.getId()))
-                    .add(new RelationshipTypeReturnStatement(pvar, gen.getRetVar(p)))
-                    .add(new VariableReturnStatement(ovar, gen.getRetVar(o)))
+                    .add(new EqualityExpression(new VariableIDExpression(a1),
+                            new LiteralExpression(node.getId())))
+                    .add(new AliasedExpression(new TypeExpression(pvar), gen.getRetVar(p)))
+                    .add(new AliasedExpression(ovar, gen.getRetVar(o)))
                     .build();
         }
 
         final CypherVar a2 = gen.getAnonVar();
         final CypherMatchQuery qLabels = new CypherQueryBuilder()
                 .add(new NodeMatchClause(a1))
-                .add(new NodeIDCondition(a1, node.getId()))
-                .addReturn(new LiteralValueReturnStatement("label", gen.getRetVar(p)))
-                .addReturn(new LabelsReturnStatement(a1, gen.getRetVar(o)))
+                .add(new EqualityExpression(new VariableIDExpression(a1),
+                        new LiteralExpression(node.getId())))
+                .add(new AliasedExpression(new LiteralExpression("label"), gen.getRetVar(p)))
+                .add(new AliasedExpression(new LabelsExpression(a1), gen.getRetVar(o)))
                 .build();
         if (certainNodeLabels.contains(o)){
             return qLabels;
@@ -572,9 +599,10 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar a6 = gen.getAnonVar();
         final CypherMatchQuery qEdges = new CypherQueryBuilder()
                 .add(new EdgeMatchClause(a4, a5, a6))
-                .add(new NodeIDCondition(a4, node.getId()))
-                .add(new RelationshipTypeReturnStatement(a5, gen.getRetVar(p)))
-                .add(new VariableReturnStatement(a6, gen.getRetVar(o)))
+                .add(new EqualityExpression(new VariableIDExpression(a4),
+                        new LiteralExpression(node.getId())))
+                .add(new AliasedExpression(new TypeExpression(a5), gen.getRetVar(p)))
+                .add(new AliasedExpression(a6, gen.getRetVar(o)))
                 .build();
         if (certainEdgeLabels.contains(p)){
             return qEdges;
@@ -583,16 +611,16 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar innerVar = new CypherVar("k");
         final CypherMatchQuery qProperties = new CypherQueryBuilder()
                 .add(new NodeMatchClause(a2))
-                .add(new NodeIDCondition(a2, node.getId()))
-                .add(new UnwindIteratorImpl(innerVar, "KEYS("+a2+")", null,
-                        List.of("k", a2+"[k]"), iterVar))
-                .add(new VariableGetItemReturnStatement(iterVar, 0, gen.getRetVar(p)))
-                .add(new VariableGetItemReturnStatement(iterVar, 1, gen.getRetVar(o)))
+                .add(new EqualityExpression(new VariableIDExpression(a2),
+                        new LiteralExpression(node.getId())))
+                .add(new UnwindIteratorImpl(innerVar, new KeysExpression(a2), null,
+                        List.of(innerVar, new PropertyAccessWithVarExpression(a2, innerVar)), iterVar))
+                .add(new AliasedExpression(new GetItemExpression(iterVar, 0), gen.getRetVar(p)))
+                .add(new AliasedExpression(new GetItemExpression(iterVar, 1), gen.getRetVar(o)))
                 .build();
         if (certainPropertyNames.contains(p) || certainPropertyValues.contains(o)){
             return qProperties;
         }
-
         return new CypherUnionQueryImpl(qLabels, qProperties, qEdges);
     }
 
@@ -610,9 +638,9 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar a3 = gen.getAnonVar();
         final CypherMatchQuery qEdges = new CypherQueryBuilder()
                 .add(new EdgeMatchClause(a1, a2, a3))
-                .add(new VariableReturnStatement(a1, gen.getRetVar(s)))
-                .add(new RelationshipTypeReturnStatement(a2, gen.getRetVar(p)))
-                .add(new VariableReturnStatement(a3, gen.getRetVar(o)))
+                .add(new AliasedExpression(a1, gen.getRetVar(s)))
+                .add(new AliasedExpression(new TypeExpression(a2), gen.getRetVar(p)))
+                .add(new AliasedExpression(a3, gen.getRetVar(o)))
                 .build();
         if ((certainNodes.contains(s) && certainNodes.contains(o)) || certainEdgeLabels.contains(p)
         || isEdgeCompatible) {
@@ -622,9 +650,9 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar a4 = gen.getAnonVar();
         final CypherMatchQuery qNodeLabels = new CypherQueryBuilder()
                 .add(new NodeMatchClause(a4))
-                .add(new VariableReturnStatement(a4, gen.getRetVar(s)))
-                .add(new LiteralValueReturnStatement("label", gen.getRetVar(p)))
-                .add(new LabelsReturnStatement(a4, gen.getRetVar(o)))
+                .add(new AliasedExpression(a4, gen.getRetVar(s)))
+                .add(new AliasedExpression(new LiteralExpression("label"), gen.getRetVar(p)))
+                .add(new AliasedExpression(new LabelsExpression(a4), gen.getRetVar(o)))
                 .build();
         if (certainNodeLabels.contains(o)) {
             return qNodeLabels;
@@ -639,19 +667,19 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar innerVar = new CypherVar("k");
         final CypherMatchQuery qNodeProperties = new CypherQueryBuilder()
                 .add(new NodeMatchClause(a5))
-                .add(new UnwindIteratorImpl(innerVar, "KEYS("+a5+")", null,
-                        List.of("k", a5+"[k]"), iterVar))
-                .add(new VariableReturnStatement(a5, gen.getRetVar(s)))
-                .add(new VariableGetItemReturnStatement(iterVar, 0, gen.getRetVar(p)))
-                .add(new VariableGetItemReturnStatement(iterVar, 1, gen.getRetVar(o)))
+                .add(new UnwindIteratorImpl(innerVar, new KeysExpression(a5), null,
+                        List.of(innerVar, new PropertyAccessWithVarExpression(a5, innerVar)), iterVar))
+                .add(new AliasedExpression(a5, gen.getRetVar(s)))
+                .add(new AliasedExpression(new GetItemExpression(iterVar, 0), gen.getRetVar(p)))
+                .add(new AliasedExpression(new GetItemExpression(iterVar, 1), gen.getRetVar(o)))
                 .build();
         final CypherMatchQuery qEdgeProperties = new CypherQueryBuilder()
                 .add(new EdgeMatchClause(a7, a8, a9))
-                .add(new UnwindIteratorImpl(innerVar, "KEYS("+a8+")", null,
-                        List.of("k", a8+"[k]"), iterVar2))
-                .add(new TripleMapReturnStatement(a7, a8, a9, gen.getRetVar(s)))
-                .add(new VariableGetItemReturnStatement(iterVar2, 0, gen.getRetVar(p)))
-                .add(new VariableGetItemReturnStatement(iterVar2, 1, gen.getRetVar(o)))
+                .add(new UnwindIteratorImpl(innerVar, new KeysExpression(a8), null,
+                        List.of(innerVar, new PropertyAccessWithVarExpression(a8, innerVar)), iterVar2))
+                .add(new AliasedExpression(new TripleMapExpression(a7, a8, a9), gen.getRetVar(s)))
+                .add(new AliasedExpression(new GetItemExpression(iterVar2, 0), gen.getRetVar(p)))
+                .add(new AliasedExpression(new GetItemExpression(iterVar2, 1), gen.getRetVar(o)))
                 .build();
         if (certainNodes.contains(s)){
             return new CypherUnionQueryImpl(qEdges, qNodeLabels, qNodeProperties);
